[package]
name = "windmouse-rs"
version = "0.1.1"
edition = "2021"
authors = ["MostlyFinished <git@praeclus.io>"]
description = "A rust implementation of windmouse"
readme = "readme.md"
repository = "https://github.com/MostlyFinished/windmouse-rs"
license = "MIT"
categories = ["algorithms"]

[dependencies]
rand = "0.9.0-alpha.2"
thiserror = "1.0.63"

[badges]
maintenance = { status = "actively-developed" }